<resources>
    <string name="app_name">Petroleum Production</string>
    <string name="smm_alos">SmmAlos</string>
    <string name="welcome">Welcome</string>
    <string name="please_login">Login</string>
    <string name="login_button">LOGIN</string>
    <string name="login_button_with_line"><u>Login</u></string>
    <string name="email_address_field">email address</string>
    <string name="password_field">password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_button_with_line"><u>Sign Up</u></string>
    <string name="sign_up_statement">Don\'t have an account?</string>
    <string name="forget_password_statement"><u>Forget your password?</u></string>
    <string name="please_wait">Please wait…</string>
    <string name="no_internet_connection">check your internet connection</string>
    <string name="enter_your_email_address">enter your email address</string>
    <string name="enter_your_password">enter your password</string>


    //////////////////////////////// preference keys //////////////////////////
    <string name="user_id_Key">firebase_user_id</string>
    <string name="name_Key">name</string>
    <string name="email_address_Key">email_address</string>
    <string name="account_admin_Key">account_admin</string>
    <string name="user_phone_number">phone_number</string>
    <string name="user_age">age</string>
    <string name="user_committee">committee</string>
    <string name="preference_string_empty_value">empty_value</string>


    <string name="login_successfully">Successfully Login!</string>
    <string name="wrong_password">your password not correct</string>
    <string name="wrong_email_address">your email not correct</string>
    <string name="not_valid_email_address">not valid email address</string>
    <string name="create_account">Sign Up</string>
    <string name="name_field">name</string>
    <string name="confirm_password_field">confirm password</string>
    <string name="login_statement">Already has an account?</string>
    <string name="signing_up">Creating Account</string>
    <string name="create_new_account">إنشاء حساب جديد</string>
    <string name="login_progress">Enter to your account</string>
    <string name="sign_up_progress">creating new account.</string>
    <string name="enter_your_name">enter your name</string>
    <string name="password_can_not_be_less_than_8">can\'t be less than 8 characters</string>
    <string name="password_not_match">not matching</string>
    <string name="email_address_already_exist">email already exist</string>
    <string name="sign_up_failed">Failed creating an account!</string>
    <string name="sign_up_successfully">Successfully Signing Up!</string>
    <string name="reset_password">Reset</string>
    <string name="reset_password_progress">Reset your password</string>
    <string name="reset_password_failed">failed, try again!</string>
    <string name="ok_button">OK</string>


    <string name="log_out"><u>Logout</u></string>
    <string name="send_reset_password_link">We sent a Link to you email address, please check it out.</string>


    <string name="faculty">Faculty of Petroleum &amp; Mining Engineering</string>
    <string name="suez_university">Suez University</string>
    <string name="department">Exploration &amp; Production Engineering</string>
    <string name="dr_ahmed_gawish">Dr.Ahmed Gawish</string>
    <string name="for_word">For</string>
    <string name="supervised_by">supervised by</string>
    <string name="prepared_by">prepared by</string>
    <string name="mahmoud_tharwat">Mahmoud Tharwat Mohamed</string>
    <string name="peter_adel">Peter Adel Kareem</string>
    <string name="mahmoud_naeem">Mahmoud Naeem Atwa</string>
    <string name="tharwat_id">17136</string>
    <string name="naeem_id">17138</string>
    <string name="peter_id">17114</string>
    <string name="ipr">IPR</string>
    <string name="ipr_title">IPR Generalization</string>
    <string name="full_well_design">Well Design</string>
    <string name="history">History</string>
    <string name="how_to_use">How to Use</string>
    <string name="average_reservoir_pressure">Average Reservoir Pressure (Pres)</string>
    <string name="psig">Psig</string>
    <string name="number_hint">00000</string>
    <string name="next">next</string>
    <string name="skin_effect_existing">Skin Effect Exists</string>
    <string name="bubble_point_pressure">Bubble Point Pressure (Pb)</string>
    <string name="test_point">Test Point Data</string>
    <string name="test_point_pressure">Pressure (Pwf)</string>
    <string name="test_point_flow_rate">Flow Rate (Ql)</string>
    <string name="flow_efficiency">Flow Efficiency (F.E)</string>
    <string name="flow_efficiency_with_number">Flow Efficiency (F.E %1$d)</string>
    <string name="stb_day">STB/Day</string>
    <string name="none">ـــــــــ</string>
    <string name="do_not_have_fe">Don\'t have F.E ?</string>
    <string name="generate"><u>Calculate it</u></string>
    <string name="add"><u>Add</u></string>
    <string name="have_another_fe_value">Have another F.E values ?</string>
    <string name="back">back</string>
    <string name="calculate_fe">Calculate F.E</string>
    <string name="calculate">calculate</string>
    <string name="skin_factor">Skin Factor (S)</string>
    <string name="another_test_point">Another Test Point</string>
    <string name="pressure">pressure (Pwf2)</string>
    <string name="flow_rate">flow rate (Ql2)</string>
    <string name="table_name">Tabel Name</string>
    <string name="pwf">Pwf (psig)</string>
    <string name="ql">Ql (STB/Day)</string>
    <string name="x_axis_title">Pressure (psig)</string>
    <string name="y_axis_title">Flow Rate (STB/Day)</string>
    <string name="fe_with_number">F.E %1$d</string>
    <string name="table_note">NOTE: Ql is an estimated value of Pwf = 0 that can\'t be reached in reality</string>
    <string name="ipr_graph">Inflow Performance Curve</string>
    <string name="out_flow_input_data">Out Flow Input Data</string>
    <string name="depth">Depth (d)</string>
    <string name="ft">Ft</string>
    <string name="well_head_pressure">Well Head Pressure (Pwh)</string>
    <string name="gas_liquid_ratio">Gas Liquid Ratio (GLR)</string>
    <string name="scf_stb">scf/STB</string>
    <string name="american_petroleum_institute">American Petroleum Institute (API)</string>
    <string name="gas_specific_gravity">Gas Specific Gravity (SG)</string>
    <string name="water_fraction">Water Fraction (Fw)</string>
    <string name="percentage">%</string>
    <string name="tubing_size_parameters">Tubing Size Values</string>
    <string name="diameter">Diameter (d)</string>
    <string name="diameter_with_number">Diameter (d %1$d)</string>
    <string name="in">in</string>
    <string name="have_another_diameter">Have another diameter ?</string>


    <string name="d_with_number">d %1$d</string>
    <string name="out_flow_table">Outflow Table</string>
    <string name="wll_design_graph">Inflow &amp; Outflow Performance Curves</string>




</resources>