<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".activities.SplashActivity">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/activity_splash_screen_image_header"
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:alpha="0.7"
        android:scaleType="fitStart"
        android:src="@drawable/oil_pump_gif_fast_speed" />

    <LinearLayout
        android:id="@+id/activity_splash_screen_doctor_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/activity_splash_screen_image_header"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/supervised_by"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/activity_splash_screen_doctor_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:text="@string/dr_ahmed_gawish"
            android:textColor="@color/white"
            android:textSize="28sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/activity_splash_screen_student_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="28dp"
        android:layout_below="@id/activity_splash_screen_doctor_layout"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/prepared_by"
            android:textColor="@color/white"
            android:textSize="20sp"/>


        <LinearLayout
            android:id="@+id/student_ids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/peter_adel"
                    android:textColor="@color/input_field"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/mahmoud_naeem"
                    android:textColor="@color/input_field"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/mahmoud_tharwat"
                    android:textColor="@color/input_field"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/peter_id"
                    android:textColor="@color/input_field"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/naeem_id"
                    android:textColor="@color/input_field"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/tharwat_id"
                    android:textColor="@color/input_field"
                    android:textSize="14sp"/>

            </LinearLayout>


        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/suez_university_logo_small"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/suez_university"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/faculty"
            android:textColor="@color/white"
            android:textSize="12sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/department"
            android:textColor="@color/white"
            android:textSize="12sp"/>

    </LinearLayout>


</RelativeLayout>



