<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:layout_marginBottom="300dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:alpha="0.25"
        android:scaleType="fitXY"
        android:src="@drawable/background_four" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_big"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="-40dp"/>

    <ImageView
        android:id="@+id/activity_login_small_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_small"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="-72dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_below="@id/activity_login_small_shape">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/primary_color"
            android:layout_marginBottom="32dp"
            android:text="@string/welcome"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/primary_color"
            android:layout_marginBottom="32dp"
            android:text="@string/please_login"/>


        <androidx.cardview.widget.CardView
            style="@style/cardView_for_navigation_item"
            app:cardCornerRadius="25dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/input_field">

            <EditText
                android:id="@+id/activity_login_email_address_field"
                style="@style/login_edit_text"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address_field"/>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            style="@style/cardView_for_navigation_item"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="25dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/input_field">

            <EditText
                android:id="@+id/activity_login_password_field"
                style="@style/login_edit_text"
                android:inputType="textPassword"
                android:hint="@string/password_field"/>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/activity_login_forget_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="4dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/text_button"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/forget_password_statement"/>




        <TextView
            android:id="@+id/activity_login_login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/final_primary_button"
            android:text="@string/login_button"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/sign_up_statement"/>

            <TextView
                android:id="@+id/activity_login_sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_color"
                android:padding="4dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/text_button"
                android:text="@string/sign_up_button_with_line"/>



        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
