<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/item_flow_efficiency_title"
            style="@style/add_task_label"
            android:text="@string/flow_efficiency"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/cardView_item"
                app:cardCornerRadius="25dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white">

                <EditText
                    android:id="@+id/item_flow_efficiency_field"
                    style="@style/login_edit_text"
                    android:gravity="center"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="numberDecimal"
                    android:hint="@string/number_hint"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/primary_color"
                android:text="@string/none"/>

        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                style="@style/add_task_label"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="#838383"
                android:layout_marginBottom="0dp"
                android:text="@string/do_not_have_fe"/>


            <TextView
                android:id="@+id/item_flow_efficiency_fe_button"
                style="@style/add_task_label"
                android:layout_marginBottom="0dp"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="2dp"
                android:textColor="@color/primary_color"
                android:background="@drawable/text_button"
                android:text="@string/generate"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/item_flow_efficiency_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="4dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/delete_button"
            android:background="@drawable/image_button"/>


    </RelativeLayout>


</LinearLayout>