<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="24dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/final_white_frame">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/dialog_top_frame"
        android:padding="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/main_activity_navigation_bottom_navigation_tables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/app_icon"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary_color"
            android:text="@string/reset_password"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="32dp"
        android:paddingBottom="20dp"
        android:orientation="vertical" >



        <androidx.cardview.widget.CardView
            style="@style/cardView_for_navigation_item"
            app:cardCornerRadius="36dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="14dp"
                android:gravity="center"
                android:textColor="@color/primary_color"
                android:text="@string/send_reset_password_link"
                android:hint="@string/email_address_field"/>

        </androidx.cardview.widget.CardView>




        <TextView
            android:id="@+id/dialog_reset_password_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:background="@drawable/final_primary_button"
            android:text="@string/ok_button"/>



    </LinearLayout>



</LinearLayout>

