<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">



    <TextView
        android:id="@+id/activity_out_flow_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out_flow_table"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:layout_above="@id/activity_out_flow_buttons"
        android:layout_below="@id/activity_out_flow_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/activity_out_flow_table_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/table_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/table_name"
                    android:textColor="@color/table_text_name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:layout_marginBottom="24dp"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/table_text_header"
                        android:text="@string/ql"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        tools:background="@color/table_text_header"/>



                    <LinearLayout
                        android:id="@+id/activity_out_flow_pwf_layout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:paddingBottom="8dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="@color/table_text_header"
                            android:text="@string/pwf"/>

                        <View
                            android:id="@+id/activity_out_flow_d_horizontal_line"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:visibility="gone"
                            android:background="@color/table_text_header"/>


                        <LinearLayout
                            android:id="@+id/activity_out_flow_d_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            tools:visibility="visible"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="0.5dp"
                                android:layout_height="match_parent"
                                android:background="@color/table_text_header"/>





                        </LinearLayout>

                    </LinearLayout>



                </LinearLayout>



            </LinearLayout>


            <TextView
                android:id="@+id/activity_out_flow__note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/table_note"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>




    </ScrollView>







    <LinearLayout
        android:id="@+id/activity_out_flow_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:paddingEnd="24dp"
            android:paddingStart="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">



            <TextView
                android:id="@+id/activity_out_flow_back_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:text="@string/back"
                android:background="@drawable/final_secondary_button"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">



            <TextView
                android:id="@+id/activity_table_out_flow_next_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:text="@string/next"
                android:background="@drawable/final_secondary_button"/>


        </LinearLayout>


    </LinearLayout>



</RelativeLayout>